Development with the Force.com Platform (3rd Edition)/src/objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currently_Assigned__c</fullName>
        <description>If true, today is between Start Date and End Date</description>
        <formula>IF(AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt;= TODAY()), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currently Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this assignment (e.g., Design, Development)</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date that the assigned resource finishes work on the project</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Cost__c</fullName>
        <description>Internal cost of the assigned resource</description>
        <label>Hourly Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Rate at which the assigned resource is billed out</description>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <description>Expected cost of this assignment, equal to Total Hours multiplied by Hourly Cost</description>
        <formula>Total_Hours__c * Hourly_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Margin__c</fullName>
        <description>Expected margin from this assignment, equal to Planned Cost minus Planned Revenue</description>
        <formula>Planned_Revenue__c - Planned_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Revenue__c</fullName>
        <description>Expected revenue from this assignment, equal to Total Hours multiplied by Hourly Rate</description>
        <formula>Total_Hours__c * Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the resource on this project (e.g., Developer, Instructor)</description>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date that the assigned resource begins work on the project</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the assignment</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard</label>
        <referenceTo>Timecard__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Number of hours to be worked during this 
assignment</description>
        <label>Total Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{MMDDYYYY}-{000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>